# backend

./: .gcloudignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
scripts/: test_deployment
src/: hello_world.cc  image_to_mesh.cc  local_run.cc
